cmake_minimum_required (VERSION 2.8) 
project (raspiviewer)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (viewer main.cpp)  
target_link_libraries (viewer ${raspicam_CV_LIBS} ${raspicam_LIBS} )
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
